gftpaymentsapp/destination-rules/config-service-dr.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: config-service
spec:
  host: config-service
  trafficPolicy:
    tls:
      mode: DISABLE
---
