gftpaymentsapp/destination-rules/gftpaymentsapp-dr.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payments-app
spec:
  host: payments-app
  trafficPolicy:
    tls:
      mode: DISABLE
---
