gftpaymentsapp/destination-rules/transfer-service-dr.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: transfer-service
spec:
  host: transfer-service
  trafficPolicy:
    tls:
      mode: DISABLE
---
