gftpaymentsapp/destination-rules/user-account-dr.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-account
spec:
  host: user-account
  trafficPolicy:
    tls:
      mode: DISABLE
---
